# LLRM

./: CMakeLists.txt  ImGuiSupport.cpp  ImGuiSupport.h  README.md  VulkanInterface.cpp  VulkanInterface.h  llrm.h  llrm_vulkan.cpp  llrm_vulkan.h  shadercompile.cpp  shadercompile.h  test.cpp
Editor/: CMakeLists.txt  Editor.cpp  MeshGenerator.h
Ruby/: CMakeLists.txt  Ruby.cpp  Ruby.h  ShaderManager.cpp  ShaderManager.h  Uniforms.h  Util.cpp  Utill.h  Vertex.h
Ruby/Examples/: CMakeLists.txt
Ruby/Examples/01-Mesh/: CMakeLists.txt  Mesh.cpp  MeshGenerator.cpp  MeshGenerator.h
Ruby/Shaders/: BRDF.hlsl  DeferredGeometry.frag.hlsl  DeferredGeometry.vert.hlsl  DeferredShade.frag.hlsl  DeferredShade.vert.hlsl  DepthRender.frag.hlsl  DepthRender.vert.hlsl  Example.vert.hlsl  Lights.h  Lights.hlsl  Material.hlsl  Tonemap.frag.hlsl  Tonemap.vert.hlsl
Shaders/: Example.frag.hlsl
